Changes in 0.70.5:
  o Client Changes
    * Files changing to config files across distributed repositories now works.
    * The update code uses more consistent use of trove sources, and only
      makes explicit calls to the repository if asked.  This should make it
      possible to create interesting update filters.
  o Build Changes (cvc)
    * Locally cooked filesets now include file contents, making the
      filesets installable.
    * Fileset cooks now retrieve all of the file objects in a single
      network request per repository.
    * The new NormalizeLibrarySymlinks policy runs the ldconfig program
      in all system library directories.  This ensures that all the
      same symlinks that ldconfig would create when the shlib tag handler
      runs are packaged.  It also warns if ldconfig finds missing files.
    * New argument to r.Run(): "wrapdir" keyword argument behaves much
      like "filewrap" but takes a string argument, which limits the scope of
      %(destdir)s relocation only to the directories under the specified
      wrapdir, which is interpreted relative to %(destdir)s.  Works best
      for applications that install under one single directory, such
      as /opt/<app>
    * Clone, branch, and shadow all take --info now instead of --test
    * ELF files that dlopen() libraries can now be provided with
      synthetic soname dependencies with
      r.Requires('soname: libfoo.so', '/path/to/file')
    * r.Requires now enforces that packages that require a file and
      include that required file must also explicitly provide it. (bz #148)
    * Clone didn't handle shadow version numbers correctly (and could create
      inconsistent version numbers)
  o Server Changes 
    * Packages added to the repository are checked to ensure the version and
      flavor of all referenced components are the same as for the package

Changes in 0.70.4:
  o Client Changes
    * The trove that satisfies a dependency that is broken by erase is